# reqwest-rs-labview

./: .gitignore  .rusty-hook.toml  Cargo.toml  LICENSE-APACHE  README.md  bundle_framework.sh  clippy.toml  justfile  mac_build.sh
.github/: copilot-instructions.md
.github/workflows/: rust.yml
docs/: ROADMAP.md
docs/developer/: index.md  labview_library_features.md  shared_library_features.md
lv_src/: .vipc  reqwest-rs-labview.vipb  reqwest-rs-labview.vipc  reqwest.lvlib  reqwest.lvproj  test_client.vi
lv_src/Client/: Client.lvclass  async_cancel.vi  async_get_progress.vi  async_get_received_bytes.vi  async_get_start.vi  async_get_total_bytes.vi  async_is_complete.vi  cancel.vi  close.vi  create.vi  create_request_builder.vi  get.vi  is_valid.vi  is_valid_ref.vi  new.vi  new_from_ref.vi  new_request_builder.vi  response_is_complete.vi  response_progress.vi  response_received_bytes.vi  response_total_bytes.vi  start_get_request.vi  start_multipart_post_request.vi
lv_src/ClientBuilder/: ClientBuilder.lvclass  Connect Timeout.vi  build.vi  build_client.vi  close.vi  create_client_and_start.vi  danger_accept_invalid_certs.vi  default_headers.vi  destroy.vi  get.vi  is_valid.vi  is_valid_ref.vi  new.vi  new_client_builder.vi  read_error_message.vi  set_connect_timeout_ms.vi  set_danger_accept_invalid_certs.vi  set_default_headers.vi  set_no_proxy.vi  set_proxy.vi  set_timeout_ms.vi  timeout.vi
lv_src/Examples/: Example - Download with Progress and Abort (RUST).vi
lv_src/HTTP Client Plugin/: Add Header.vi  Close Handle.vi  DELETE.vi  GET.vi  Get Header.vi  HEAD.vi  HTTP Client reqwest Tree.vi  HTTP Client reqwest.lvclass  Header Exists.vi  List Headers.vi  Open Handle.vi  PATCH Buffer.vi  PATCH File.vi  POST Buffer.vi  POST File.vi  POST Multipart.vi  PUT Buffer.vi  PUT File.vi  Remove Header.vi
lv_src/Headers/: As Ref.vi  Free.vi  Headers.lvclass  add.vi  add_header.vi  close.vi  create.vi  destroy.vi  free_headers.vi  get_all.vi  get_refnum.vi  is Valid Ref.vi  is_valid.vi  is_valid_ref.vi  new.vi  new_headers.vi  set_refnum.vi  timeout.vi  to_int.vi
lv_src/MultipartForm/: Example - Multipart File Upload.vi  MultipartForm.lvclass  add_binary_data.vi  (+7 more)
scripts/: bundle_framework.sh  mac_build.sh
src/: async_support.rs  globals.rs  helpers.rs  lib.rs  types.rs
tests/: integration_tests.rs
(+109 files in other folders)
