[package]
name = "reqwest_dll"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2.173"
reqwest = { version = "0.12.20", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1.45.1", features = ["full"] }
lazy_static = "1.5.0"
futures-util = "0.3.31"
webpki-roots = "1.0.0"
serde_json = "1.0.140"
