[package]
name = "reqwest_dll"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2.173"
reqwest = { version = "0.12.20", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1.45.1", features = ["full"] }
lazy_static = "1.5.0"
futures-util = "0.3.31"
webpki-roots = "1.0.0"
serde_json = "1.0.140"
labview-interop = { version = "0.4", features = ["link"]}


[dev-dependencies]
serde_json = "1.0.140"
pingora-proxy = "0.5.0"
pingora-core = "0.5.0"
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
sfv = "0.13.0"
