[package]
name = "reqwest_dll"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

# Clippy configuration for FFI-heavy code
[lints.clippy]
# Allow patterns necessary for FFI code (higher priority overrides)
not_unsafe_ptr_arg_deref = { level = "allow", priority = 1 }  # Pointer dereferencing in FFI functions
unwrap_used = { level = "allow", priority = 1 }               # unwrap() acceptable in FFI code where panics are OK
expect_used = { level = "allow", priority = 1 }               # expect() for critical operations
# Enable all clippy warnings by default (lower priority)
all = { level = "warn", priority = 0 }

[dependencies]
libc = "0.2.175"
reqwest = { version = "0.12.23", features = ["json", "stream", "rustls-tls", "multipart"], default-features = false }
tokio = { version = "1.47.1", features = ["full"] }
lazy_static = "1.5.0"
futures-util = "0.3.31"
webpki-roots = "1.0.2"
serde_json = "1.0.143"


[dev-dependencies]
serde_json = "1.0.143"
pingora-proxy = "0.6.0"
pingora-core = "0.6.0"
async-trait = "0.1.89"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
sfv = "0.14.0"
rusty-hook = "0.11.2"